<resources>
    <string name="app_name">EAC3</string>
    <string name="action_settings">Settings</string>
    <string name="offerList">Lista de Ofertas</string>
    <string name="title_activity_profile">Profile</string>
    <string name="profile">Perfil</string>
    <string name="offerMap">Mapa de Ofertas</string>
    <string name="guardar">Guardar</string>
    <string name="clear">Limpiar</string>
    <string name="takeBack">Volver</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="etDescription">Descripción</string>
    <string name="image">Imagen</string>
    <string name="title_activity_offer_map">Map</string>
    <string name="title_activity_offer_details">OfferDetails</string>
    <string name="title_activity_profile_show">ProfileShow</string>
    <string name="edit">Editar</string>
    <string name="takePhoto">¡Tomar Foto!</string>
</resources>
