<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.klaussius.eac3.Profile"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:text="@string/profile"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvContent"
            android:layout_marginTop="15dp" />

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etName" />

        <TextView
            android:text="@string/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSurname" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etSurname" />

        <TextView
            android:text="@string/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/etDescription" />

        <TextView
            android:text="@string/image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvImage" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etImage" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp">

            <Button
                android:text="@string/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btSaveProfile"
                android:backgroundTint="@android:color/holo_green_light"
                android:layout_weight="1" />

            <Button
                android:text="@string/clear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btClearProfile"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_light" />

            <Button
                android:text="@string/takeBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btTakeBack"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
