<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_profile_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.klaussius.eac3.ProfileShowActivity"
    tools:showIn="@layout/activity_profile_show">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:text="@string/profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvProfileInfo"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:gravity="center"
            android:textColor="@android:color/black" />

        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNameInfo"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvName"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSurnameInfo"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSurname"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="@string/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescriptionInfo"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescription"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btEdit"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_orange_light" />

            <Button
                android:text="@string/takeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btTakeBack"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_light" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
